[gd_scene load_steps=22 format=3 uid="uid://nvglwdmx63ef"]

[ext_resource type="Texture2D" uid="uid://cvg2815mbdxw3" path="res://assets/bnt65.png" id="1"]
[ext_resource type="Texture2D" uid="uid://d147a2q4wkql6" path="res://assets/bnt652.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dtljijhrggiij" path="res://assets/botaomodeloplay.png" id="4_17nrh"]
[ext_resource type="Texture2D" uid="uid://cf2f77hn1wg24" path="res://assets/botaomodelopause.png" id="5_x36q2"]
[ext_resource type="Script" path="res://scripts/Controles.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dlli7ncifnxlx" path="res://assets/botaomodeloreiniciar.png" id="6_vk0fa"]

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxEmpty" id="7"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="9"]

[sub_resource type="StyleBoxEmpty" id="8"]

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="10"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="12"]

[sub_resource type="StyleBoxEmpty" id="11"]

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="StyleBoxEmpty" id="13"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="StyleBoxEmpty" id="15"]

[sub_resource type="StyleBoxEmpty" id="14"]

[node name="Controles" type="CanvasLayer"]
script = ExtResource("6")

[node name="direita" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.984314)
position = Vector2(900, 1674)
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("1")
passby_press = true
action = "mover_direita"

[node name="esquerda" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.984314)
position = Vector2(24, 1674)
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("2")
passby_press = true
action = "mover_esquerda"

[node name="Play" type="Button" parent="."]
offset_left = 935.0
offset_right = 1031.0
offset_bottom = 96.0
scale = Vector2(1.5, 1.5)
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("7")
theme_override_styles/pressed = SubResource("1")
theme_override_styles/disabled = SubResource("9")
theme_override_styles/focus = SubResource("8")
icon = ExtResource("4_17nrh")
icon_alignment = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="Play"]
action = "continuarB"

[node name="Pausar" type="Button" parent="."]
offset_left = 771.0
offset_right = 867.0
offset_bottom = 96.0
scale = Vector2(1.5, 1.5)
theme_override_styles/normal = SubResource("4")
theme_override_styles/hover = SubResource("10")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/disabled = SubResource("12")
theme_override_styles/focus = SubResource("11")
icon = ExtResource("5_x36q2")
icon_alignment = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="Pausar"]
action = "pausarB"

[node name="Reiniciar" type="Button" parent="."]
offset_left = 602.0
offset_right = 698.0
offset_bottom = 96.0
scale = Vector2(1.5, 1.5)
theme_override_styles/normal = SubResource("6")
theme_override_styles/hover = SubResource("13")
theme_override_styles/pressed = SubResource("5")
theme_override_styles/disabled = SubResource("15")
theme_override_styles/focus = SubResource("14")
icon = ExtResource("6_vk0fa")
icon_alignment = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="Reiniciar"]
action = "reiniciarB"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Pausar" to="." method="_on_Pausar_pressed"]
[connection signal="pressed" from="Reiniciar" to="." method="_on_Reiniciar_pressed"]
